# myMCPClient

./: .env-example  .gitignore  API_DOCUMENTATION.md  BUILD.md  README.md  build_app.sh  create_icon.sh  package-lock.json  package.json  prepare_python_env.sh  pyproject.toml  requirements-app.txt  setup.py
backend/: main.py  mcp_servers-example.json  system_prompt.txt
frontend/: main.js  preload.js
frontend/renderer/: fetch_api.js  index.html  script.js  style.css  ui_controller.js
