[project]
name = "myMCPClient-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-mcp-adapters>=0.0.5",
    "langgraph>=0.3.18",
]
